# adtk

./: .coveragerc  .gitattributes  .gitignore  .isort.cfg  .readthedocs.yml  .travis.yml  README.md  mypy.ini  setup.cfg  tox.ini
.github/.workflows/: pythonpublish.yml
.github/workflows/: pythonpublish.yml
docs/: Makefile  README.md  conf.py  developer.rst  examples.rst  index.rst  inheritance.rst  install.rst  quickstart.rst  releasehistory.rst  requirements-docs.txt  userguide.rst
docs/api/: aggregators.rst  data.rst  detectors.rst  metrics.rst  modules.rst  pipe.rst  transformers.rst  visualization.rst
docs/notebooks/: quickstart.ipynb
docs/notebooks/data/: autoregression.csv  cpu.csv  gaussian2d.csv  generator.csv  invalid_series.csv  pressure.csv  price_long.csv  price_short.csv  pricing.csv  seasonal+trend.csv  seasonal.csv  seismic.csv  sin.csv  temperature.csv
docs/notebooks/data/quickstart/: known_anomalies.csv  testing.csv  training.csv
src/adtk/: __init__.py  _aggregator_base.py  _base.py  _base_old.py  _detector_base.py  _transformer_base.py  _utils.py
src/adtk/aggregator/: __init__.py  _aggregator.py  aggregator.py  test_base.py
src/adtk/data/: __init__.py  _data.py  data.py
src/adtk/detector/: __init__.py  _detector_1d.py  _detector_hd.py  binary_segmentation.py  detector_1d.py  detector_hd.py
src/adtk/metrics/: __init__.py  _metrics.py  metrics.py
src/adtk/pipe/: __init__.py  _pipe.py  pipe.py
src/adtk/transformer/: __init__.py  _transformer_1d.py  _transformer_hd.py  transformer_1d.py  transformer_hd.py
src/adtk/visualization/: __init__.py  _visualization.py  visualization.py  visualization_old.py
tests/: test_aggregators.py  test_attribute.py  test_data_validation.py  test_detector1d.py  test_detectorhd.py  test_expand_events.py  test_few_shot_fit.py  test_few_shot_predict.py  test_inconsistent_train_test.py  test_label_list_convert.py  test_metric.py  test_pipe.py  test_print_subclasses.py  test_resample.py  test_series_name.py  test_stl_deseasonal.py  test_train_test_split.py  test_transformer1d.py  test_transformerhd.py  test_visualization.ipynb
