[metadata]
name = adtk
version = 0.3.0
author = Arundo Analytics, Inc.
maintainer = Tailai Wen
maintainer_email = tailai.wen@arundo.com
url = https://github.com/arundo/adtk
description = A package for unsupervised time series anomaly detection
long_description = file: README.md
long_description_content_type= text/markdown
keywords = anomaly detection, time series
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
license = Mozilla Public License 2.0 (MPL 2.0)

[options]
zip_safe = False
python_requires = >=3.5
package_dir =
    =src
packages = find:
install_requires =
    numpy>=1.15
    pandas>=0.20
    matplotlib>=3.0
    seaborn>=0.9
    scikit-learn>=0.20
    statsmodels>=0.9

[options.packages.find]
where = src
exclude =
    tests
    docs

[options.extras_require]
testing =
    pytest