[metadata]
name = adtk
version = 0.6.2
author = Arundo Analytics, Inc.
maintainer = Tailai Wen
maintainer_email = tailai.wen@arundo.com
url = https://github.com/arundo/adtk
description = A package for unsupervised time series anomaly detection
long_description = file: README.md
long_description_content_type= text/markdown
keywords = anomaly detection, time series
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
license = Mozilla Public License 2.0 (MPL 2.0)

[options]
zip_safe = False
python_requires = >=3.5
package_dir =
    =src
packages = find:
install_requires =
    numpy>=1.15
    pandas>=0.23
    matplotlib>=3.0
    scikit-learn>=0.20
    statsmodels>=0.9
    packaging>=17.0
    tabulate>=0.8

[options.packages.find]
where = src
exclude =
    tests
    docs

[options.extras_require]
test =
    pytest>=4
    tox>=3
    coverage>3.6,<5
    pytest-cov>=2.7
    coveralls>=1.7
    mypy>=0.641
doc =
    sphinx>=2.4,<3
    sphinx_rtd_theme<0.5
    nbsphinx>=0.4
    python-dateutil>=2.5
    jupyter>=1
dev =
    black==19.3b0
    isort==4.3.21